--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-white py-4 shadow-sm">
+<nav class="navbar navbar-expand-lg navbar-light bg-white py-4 shadow-sm">
   <div class="container">
     <a class="navbar-brand text-primary" href="{{ site.url }}">{{ site.title }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,6 +7,9 @@
 
     <div class="collapse navbar-collapse" id="navbarsExample04">
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ site.url }}">Home</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ site.url }}/grants/">Grants</a>
         </li>
