--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -12,7 +12,7 @@ $gray-800: #333333 !default;
 $gray-900: #212529 !default;
 
 $black:   #000000 !default;
-$blue:    #007bff !default;
+$blue:    #3b5998 !default;
 $indigo:  #6610f2 !default;
 $purple:  #772953 !default;
 $pink:    #e83e8c !default;
@@ -22,12 +22,11 @@ $yellow:  #FFEF00 !default;
 $green:   #38B44A !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
-$facebook:		#3b5998;
 
 $primary:       $red !default;
 $secondary:     $gray-500 !default;
 $success:       $green !default;
-$info:          $cyan !default;
+$info:          $blue !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-200 !default;
@@ -39,10 +38,6 @@ $yiq-contrasted-threshold: 200 !default;
 // Body
 
 $body-color:	$gray-700 !default;
-
-// Buttons
-
-$btn-facebook:	$facebook !default;
 
 // Fonts
 
