--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="full-width-image p-3 p-md-5" style="background-image: url('{{ page.hero-image }}'); background-size: cover; background-position: center;">
+<div class="full-width-image p-3 p-md-5" style="background-image: url('{{ page.image }}'); background-size: cover; background-position: center;">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 text-white">
