Remove leading / from page links

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,19 +11,19 @@
           <a class="nav-link" href="{{ site.url }}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.url }}/grants/">Grants</a>
+          <a class="nav-link" href="{{ site.url }}grants/">Grants</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.url }}/cookbook/">Cookbook</a>
+          <a class="nav-link" href="{{ site.url }}cookbook/">Cookbook</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://www.peacecorps.gov/kyrgyz-republic/" target="_blank">Serve in KG</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.url }}/contact/">Contact</a>
+          <a class="nav-link" href="{{ site.url }}contact/">Contact</a>
         </li>
       </ul>
-      <a href="{{ site.url }}/donate/" class="btn btn-primary" role="button" aria-pressed="true">Donate Now</a>
+      <a href="{{ site.url }}donate/" class="btn btn-primary" role="button" aria-pressed="true">Donate Now</a>
     </div>
   </div>
 </nav>
