--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white py-4 shadow-sm">
   <div class="container">
-    <a class="navbar-brand text-primary" href="{{ site.url }}">{{ site.title }}</a>
+    <a class="navbar-brand text-primary" href="{{ site.url }}/">{{ site.title }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,22 +8,22 @@
     <div class="collapse navbar-collapse" id="navbarsExample04">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.url }}">Home</a>
+          <a class="nav-link" href="{{ site.url }}/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.url }}grants/">Grants</a>
+          <a class="nav-link" href="{{ site.url }}/grants/">Grants</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.url }}cookbook/">Cookbook</a>
+          <a class="nav-link" href="{{ site.url }}/cookbook/">Cookbook</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://www.peacecorps.gov/kyrgyz-republic/" target="_blank">Serve in KG</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.url }}contact/">Contact</a>
+          <a class="nav-link" href="{{ site.url }}/contact/">Contact</a>
         </li>
       </ul>
-      <a href="{{ site.url }}donate/" class="btn btn-primary" role="button" aria-pressed="true">Donate Now</a>
+      <a href="{{ site.url }}/donate/" class="btn btn-primary" role="button" aria-pressed="true">Donate Now</a>
     </div>
   </div>
 </nav>
