Fix SEM Rush errors

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,7 +44,7 @@
       <ul class="list-unstyled text-small">
         <li><a class="text-muted" href="{{ site.url }}/contact/">Contact</a></li>
         <li><a class="text-muted" href="{{ site.url }}/privacy/">Privacy</a></li>
-        <li><a class="text-muted" href="{{ site.url }}/sitemap.xml/">Sitemap</a></li>
+        <li><a class="text-muted" href="{{ site.url }}/sitemap.xml">Sitemap</a></li>
       </ul>
     </div>
   </div>
