--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,7 +57,7 @@ post_class:     post-template
 
     </div>
 
-    <div class="row">
+    <div class="row mb-5">
 
         <!-- Post -->
         <div class="col-lg-8 px-3 px-sm-0">
