--- a/_includes/postbox-vertical.html
+++ b/_includes/postbox-vertical.html
@@ -28,7 +28,7 @@
         {{ post.excerpt | strip_html | truncatewords:20 }}
       </p>
       <div class="read-more">
-        <a href="{{ post.url }}">Read More</a>
+        <a href="{{ site.url }}/{{ post.url }}">Read More</a>
       </div>
     </div>
 
