--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,9 @@
     <!-- <a href="index.html" class="logo"><img src="{{ site.url }}/assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
     <nav class="nav-menu d-none d-lg-block">
+    </nav><!-- .nav-menu -->
+
+    <nav class="nav-menu d-none d-lg-block">
       <ul>
         <li><a href="{{ site.url }}/grants/">Grants</a></li>
         <li><a href="{{ site.url }}/cookbook/">cookbook</a></li>
