--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -664,6 +664,84 @@ section {
 }
 
 /*--------------------------------------------------------------
+# Authors
+--------------------------------------------------------------*/
+.authors .content h2 {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 60px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+.authors .content h3 {
+  font-weight: 500;
+  line-height: 32px;
+  font-size: 24px;
+}
+
+.authors .content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.authors .content ul li {
+  padding: 10px 0 0 28px;
+  position: relative;
+}
+
+.authors .content ul i {
+  left: 0;
+  top: 7px;
+  position: absolute;
+  font-size: 20px;
+  color: #d9232d;
+}
+
+.authors .content p:last-child {
+  margin-bottom: 0;
+}
+
+/*--------------------------------------------------------------
+# Board
+--------------------------------------------------------------*/
+.board .content h2 {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 60px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+.board .content h3 {
+  font-weight: 500;
+  line-height: 32px;
+  font-size: 24px;
+}
+
+.board .content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.board .content ul li {
+  padding: 10px 0 0 28px;
+  position: relative;
+}
+
+.board .content ul i {
+  left: 0;
+  top: 7px;
+  position: absolute;
+  font-size: 20px;
+  color: #d9232d;
+}
+
+.board .content p:last-child {
+  margin-bottom: 0;
+}
+
+/*--------------------------------------------------------------
 # Clients
 --------------------------------------------------------------*/
 .clients {
