--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
           <div class="footer-info">
             <h3>{{ site.title }}</h3>
             <p>{% if site.address %}{{ site.address }}<br><br>{% endif %}
-              {% if site.phone %}<strong>Phone:</strong> {{ site.phone }}<br>{% endif %}
-              {% if site.email %}<strong>Email:</strong> {{ site.email }}<br>{% endif %}
+              {% if site.phone %}<strong>Phone:</strong><br>{{ site.phone }}<br><br>{% endif %}
+              {% if site.email %}<strong>Email:</strong><br>{{ site.email }}<br>{% endif %}
             </p>
             <div class="social-links mt-3">
               {% include social-buttons.html %}
@@ -23,11 +23,11 @@
           {% assign sortedTags = site.tags %}  
             {% if sortedTags.first[0] == null %}
               {% for tag in sortedTags limit:5 %} 
-                <li><i class="bx bx-chevron-right"></i> <a href="{{ site.url }}/tag/{{ tag | slugify }}/">{{ tag | capitalize }}</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="{{ site.url }}/tag/{{ tag | slugify }}/">{{ tag }}</a></li>
               {% endfor %}
             {% else %}
               {% for tag in sortedTags limit:5 %} 
-                <li><i class="bx bx-chevron-right"></i> <a href="{{ site.url }}/tag/{{ tag[0] | slugify }}/">{{ tag[0] | capitalize }}</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="{{ site.url }}/tag/{{ tag[0] | slugify }}/">{{ tag[0] }}</a></li>
               {% endfor %}
             {% endif %}
           {% assign sortedTags = nil %}
@@ -35,16 +35,16 @@
         </div>
 
         <div class="col-lg-3 col-md-6 footer-links">
-          <h4>Top Categories</h4>
+          <h4>Popular Categories</h4>
           <ul>
           {% assign sortedCategories = site.categories %}  
             {% if sortedCategories.first[0] == null %}
               {% for category in sortedCategories limit:5 %} 
-                <li><i class="bx bx-chevron-right"></i> <a href="{{ site.url }}/category/{{ category | slugify }}/">{{ category | capitalize }}</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="{{ site.url }}/category/{{ category | slugify }}/">{{ category }}</a></li>
               {% endfor %}
             {% else %}
               {% for category in sortedCategories limit:5 %} 
-                <li><i class="bx bx-chevron-right"></i> <a href="{{ site.url }}/category/{{ category[0] | slugify }}/">{{ category[0] | capitalize }}</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="{{ site.url }}/category/{{ category[0] | slugify }}/">{{ category[0] }}</a></li>
               {% endfor %}
             {% endif %}
           {% assign sortedCategories = nil %}
