--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,11 +11,35 @@
 
     <nav class="nav-menu d-none d-lg-block">
       <ul>
-        <li><a href="{{ site.url }}/grants/">Grants</a></li>
-        <li><a href="{{ site.url }}/cookbook/">cookbook</a></li>
-        <li><a href="{{ site.url }}/blog/">Blog</a></li>
-        <li><a href="https://www.peacecorps.gov/kyrgyz-republic/">Serve in KG</a></li>
-        <li><a href="{{ site.url }}/contact/">Contact</a></li>
+        <li class="drop-down"><a href="#">Blog</a>
+          <ul>
+            {% assign sortedCategories = site.categories %}  
+            {% for category in sortedCategories %} 
+            {% if sortedCategories.first[0] == null %}
+              <li><i class="bx bx-chevron-right"></i> <a href="{{ site.url }}/category/{{ category | slugify }}/">{{ category }}</a></li>
+            {% else %}
+              <li><a href="{{ site.url }}/category/{{ category[0] | slugify }}/">{{ category[0] }}</a></li>
+            {% endif %}
+            {% endfor %}
+              <hr>
+              <li><a href="{{ site.url }}/authors/">Authors</a></li>
+          </ul>
+        </li>
+        <li class="drop-down"><a href="#">For PCVs</a>
+          <ul>
+            <li><a href="{{ site.url }}/cookbook/">Cookbook</a></li>
+            <li><a href="{{ site.url }}/grants/">Grants</a></li>
+          </ul>
+        </li>
+        <li class="drop-down"><a href="#">About</a>
+          <ul>
+              <li><a href="{{ site.url }}/board/">Board</a></li>
+              <li><a href="{{ site.url }}/volunteers/">Volunteers</a></li>
+              <li><a href="https://www.peacecorps.gov/kyrgyz-republic/" target="_blank">Serve in KG</a></li>
+              <!-- <li><a href="{{ site.url }}/subscribe/">Subscribe</a></li> -->
+              <li><a href="{{ site.url }}/contact/">Contact</a></li>
+          </ul>
+        </li>
       </ul>
     </nav><!-- .nav-menu -->
 
