--- a/_includes/homepage-clients.html
+++ b/_includes/homepage-clients.html
@@ -5,27 +5,27 @@
     <div class="row">
 
       <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-        <img src="{{ site.url }}/assets/images/clients/client-1.png" class="img-fluid" alt="">
+        {% cloudinary {{ site.url }}/assets/images/clients/client-1.png %}
       </div>
 
       <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-        <img src="{{ site.url }}/assets/images/clients/client-2.png" class="img-fluid" alt="">
+        {% cloudinary {{ site.url }}/assets/images/clients/client-2.png %}
       </div>
 
       <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-        <img src="{{ site.url }}/assets/images/clients/client-3.png" class="img-fluid" alt="">
+        {% cloudinary {{ site.url }}/assets/images/clients/client-3.png %}
       </div>
 
       <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-        <img src="{{ site.url }}/assets/images/clients/client-4.png" class="img-fluid" alt="">
+        {% cloudinary {{ site.url }}/assets/images/clients/client-4.png %}
       </div>
 
       <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-        <img src="{{ site.url }}/assets/images/clients/client-5.png" class="img-fluid" alt="">
+        {% cloudinary {{ site.url }}/assets/images/clients/client-5.png %}
       </div>
 
       <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-        <img src="{{ site.url }}/assets/images/clients/client-6.png" class="img-fluid" alt="">
+        {% cloudinary {{ site.url }}/assets/images/clients/client-6.png %}
       </div>
 
     </div>
