--- a/_includes/homepage-portfolio.html
+++ b/_includes/homepage-portfolio.html
@@ -22,7 +22,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
-          <img src="{{ site.url }}/assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+          {% cloudinary {{ site.url }}/assets/img/portfolio/portfolio-1.jpg %}
           <div class="portfolio-info">
             <h4>App 1</h4>
             <p>App</p>
@@ -36,7 +36,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
         <div class="portfolio-wrap">
-          <img src="{{ site.url }}/assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+          {% cloudinary {{ site.url }}/assets/img/portfolio/portfolio-2.jpg %}
           <div class="portfolio-info">
             <h4>Web 3</h4>
             <p>Web</p>
@@ -50,7 +50,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
-          <img src="{{ site.url }}/assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+          {% cloudinary {{ site.url }}/assets/img/portfolio/portfolio-3.jpg %}
           <div class="portfolio-info">
             <h4>App 2</h4>
             <p>App</p>
@@ -64,7 +64,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-card">
         <div class="portfolio-wrap">
-          <img src="{{ site.url }}/assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+          {% cloudinary {{ site.url }}/assets/img/portfolio/portfolio-4.jpg %}
           <div class="portfolio-info">
             <h4>Card 2</h4>
             <p>Card</p>
@@ -78,7 +78,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
         <div class="portfolio-wrap">
-          <img src="{{ site.url }}/assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+          {% cloudinary {{ site.url }}/assets/img/portfolio/portfolio-5.jpg %}
           <div class="portfolio-info">
             <h4>Web 2</h4>
             <p>Web</p>
@@ -92,7 +92,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
-          <img src="{{ site.url }}/assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+          {% cloudinary {{ site.url }}/assets/img/portfolio/portfolio-6.jpg %}
           <div class="portfolio-info">
             <h4>App 3</h4>
             <p>App</p>
@@ -106,7 +106,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-card">
         <div class="portfolio-wrap">
-          <img src="{{ site.url }}/assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+          {% cloudinary {{ site.url }}/assets/img/portfolio/portfolio-7.jpg %}
           <div class="portfolio-info">
             <h4>Card 1</h4>
             <p>Card</p>
@@ -120,7 +120,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-card">
         <div class="portfolio-wrap">
-          <img src="{{ site.url }}/assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+          {% cloudinary {{ site.url }}/assets/img/portfolio/portfolio-8.jpg %}
           <div class="portfolio-info">
             <h4>Card 3</h4>
             <p>Card</p>
@@ -134,7 +134,7 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
         <div class="portfolio-wrap">
-          <img src="{{ site.url }}/assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+          {% cloudinary {{ site.url }}/assets/img/portfolio/portfolio-9.jpg %}
           <div class="portfolio-info">
             <h4>Web 3</h4>
             <p>Web</p>
