--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -1,6 +1,6 @@
 <div class="col mb-3">
 	<div class="card h-100">
-		<img src="{{ site.url }}{{ post.image }}" alt="{{ post.title }}" class="img-fluid">
+		{% cloudinary {{ site.url }}{{ post.image }}" alt="{{ post.title }}" %}
 	    <div class="card-body">
 	        <h5 class="card-title">{{ post.title }}</h5>
 	        <p class="card-text mb-0">{{ post.excerpt | strip_html | truncatewords:20 }}</p>
