--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: default
 
             {% if page.image %}
             <div class="entry-img">
-              <img src="{{ site.url }}{{ page.image }}" alt="{{ page.title }}" class="img-fluid">
+              {% cloudinary {{ site.url }}{{ page.image }}" alt="{{ page.title }}" %}
             </div>
             {% endif %}
 
