Scale cloudinary to homepage hero

--- a/_includes/homepage-hero.html
+++ b/_includes/homepage-hero.html
@@ -10,10 +10,10 @@
       {% for post in filtered_posts %}
       {% endfor %}
     </ol>
-    
+
     <div class="carousel-inner" role="listbox">
       {% for post in filtered_posts %}
-       <div class="carousel-item{% if forloop.first %} active{% endif %}" style="background-image: url({{ site.url }}/{{ post.image }})">
+       <div class="carousel-item{% if forloop.first %} active{% endif %}" style="background-image: url(https://res.cloudinary.com/friendsofkyrgyzstan/image/fetch/c_limit,f_auto,q_auto,w_1000/{{ site.url }}/{{ post.image }})">
         <div class="carousel-container">
           <div class="container">
             <h2 class="animate__animated animate__fadeInDown">{{ post.title }}</h2>
