--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@ layout: default
             </div>
             {% endif %}
 
-            <h2 class="entry-title">{{ page.title | capitalize }}</h2>
+            <h2 class="entry-title">{{ page.title }}</h2>
 
             <div class="entry-meta">
               <ul>
