--- a/_includes/postbox-vertical.html
+++ b/_includes/postbox-vertical.html
@@ -2,11 +2,11 @@
   <article class="entry">
 
     <div class="entry-img">
-      {% cloudinary {{ site.url }}{{ post.image }} alt="{{ post.title }}" %}
+      {% cloudinary {{ site.url }}/{{ post.image }} alt="{{ post.title }}" %}
     </div>
 
     <h2 class="entry-title">
-      <a href="{{ post.url }}">{{ post.title }}</a>
+      <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
     </h2>
 
     <div class="entry-meta">
@@ -28,7 +28,7 @@
         {{ post.excerpt | strip_html | truncatewords:20 }}
       </p>
       <div class="read-more">
-        <a href="{{ site.url }}/{{ post.url }}">Read More</a>
+        <a href="{{ site.url }}{{ post.url }}">Read More</a>
       </div>
     </div>
 
