--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo {
-  font-size: 28px;
+  font-size: 1.3rem;
   margin: 0;
   padding: 0;
   line-height: 1;
