--- a/_includes/homepage-hero.html
+++ b/_includes/homepage-hero.html
@@ -4,16 +4,10 @@
   <div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel">
 
     {% assign filtered_posts = site.posts | where: 'featured', 'true' %}
+    <div class="carousel-inner">
 
-    <ol class="carousel-indicators" id="hero-carousel-indicators">
-      {% assign filtered_posts = site.posts | where: 'featured', 'true' %}
       {% for post in filtered_posts %}
-      {% endfor %}
-    </ol>
-
-    <div class="carousel-inner" role="listbox">
-      {% for post in filtered_posts %}
-       <div class="carousel-item{% if forloop.first %} active{% endif %}" style="background-image: url(https://res.cloudinary.com/friendsofkyrgyzstan/image/fetch/c_limit,f_auto,q_auto,w_1000/{{ site.url }}/{{ post.image }})">
+      <div class="carousel-item{% if forloop.first %} active{% endif %}" style="background-image: url(https://res.cloudinary.com/friendsofkyrgyzstan/image/fetch/c_limit,f_auto,q_auto,w_1000/{{ site.url }}/{{ post.image }})">
         <div class="carousel-container">
           <div class="container">
             <h2 class="animate__animated animate__fadeInDown">{{ post.title }}</h2>
@@ -23,17 +17,8 @@
         </div>
       </div>
       {% endfor %}
+
     </div>
-
-    <a class="carousel-control-prev" href="#heroCarousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon icofont-simple-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-
-    <a class="carousel-control-next" href="#heroCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon icofont-simple-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
 
   </div>
 
