New page: /stories/

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,7 @@
           <ul>
             <li><a href="{{ site.url }}/cookbook/">Cookbook</a></li>
             <li><a href="{{ site.url }}/grants/">Grants</a></li>
+            <li><a href="{{ site.url }}/stories/">Stories</a></li>
           </ul>
         </li>
         <li class="drop-down"><a href="#">About</a>
