--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@ layout: compress
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="{{ site.url }}/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link href="{{ site.url }}/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="{{ site.url }}/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="{{ site.url }}/assets/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -52,9 +52,8 @@ layout: compress
   {% include back-to-top.html %}
 
   <!-- Vendor JS Files -->
-  <script src="{{ site.url }}/assets/vendor/jquery/jquery.min.js"></script>
-  <script src="{{ site.url }}/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="{{ site.url }}/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>  <script src="{{ site.url }}/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
   <script src="{{ site.url }}/assets/vendor/php-email-form/validate.js"></script>
   <script src="{{ site.url }}/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="{{ site.url }}/assets/vendor/venobox/venobox.min.js"></script>
