--- a/_includes/homepage-hero.html
+++ b/_includes/homepage-hero.html
@@ -7,7 +7,7 @@
     <div class="carousel-inner">
 
       {% for post in filtered_posts %}
-      <div class="carousel-item{% if forloop.first %} active{% endif %}" style="background-image: url(https://res.cloudinary.com/friendsofkyrgyzstan/image/fetch/c_limit,f_auto,q_auto,w_1000/{{ site.url }}/{{ post.image }})">
+      <div class="carousel-item{% if forloop.first %} active{% endif %}" style="background-image: url(https://res.cloudinary.com/friendsofkyrgyzstan/image/fetch/c_limit,f_auto,q_auto,w_1000/{{ post.image | absolute_url }})">
         <div class="carousel-container">
           <div class="container">
             <h2 class="animate__animated animate__fadeInDown">{{ post.title }}</h2>
